--- a/style.css
+++ b/style.css
@@ -3,12 +3,21 @@
     margin: 0;
 }
 
+.container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+}
+
 .textview {
     width: 220pt;
     font-size: 25pt;
     margin: 2pt;
     resize: none;
     text-align: right;
+    border-radius: 4px;
 }
 
 .button{
