--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    color: white;
 }
 
 .container{
@@ -15,12 +16,12 @@
 .textview {
     width: 216pt;
     font-size: 25pt;
+    color: #f1f1f1;
     margin: 2pt;
     resize: none;
     text-align: right;
     border-radius: 4px;
     border-color: transparent;
-    color: white;
     background-color: rgb(147, 147, 236);
 }
 
